--- a/src/TopComponent/top.css
+++ b/src/TopComponent/top.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 .top {
     width: 100%;
     height: 67px;
@@ -11,4 +9,7 @@
     left: 0;
     color: #E8833A;
     background-color: #C3CFD9;
+    font-size: 34px;
+    font-weight: 400;
+    line-height: 40px;
 }
