--- a/src/ListFilmsComponent/listFilms.css
+++ b/src/ListFilmsComponent/listFilms.css
@@ -23,7 +23,14 @@
 }
 
 .film {
+    height: 209px;
+    width: 145px;
+    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
     margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .film img {
