--- a/src/SessionComponent/sessionFilm.css
+++ b/src/SessionComponent/sessionFilm.css
@@ -1,3 +1,15 @@
+.description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 110px;
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.04em;
+    color:#293845;
+}
 
 .info-film {
     justify-content: space-between;
@@ -35,41 +47,4 @@
 button:hover {
     height: 50px;
     background-color: red;
-}
-
-.bottom-bar {
-    display: flex;
-    height: 117px;
-    width: 375px;
-    background-color: #DFE6ED;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-}
-.chosen-film {
-   display: flex;
-   align-items: center;
-}
-
-.chosen-film div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 89px;
-    width: 64px;
-    border-radius: 2px;    
-    margin-left: 10px;
-    background-color: #ffffff;
-}
-
-.chosen-film img {
-    height: 72px;
-    width: 48px;
-}
-
-.chosen-film span { 
-    font-size: 26px;
-    line-height: 30px;
-    margin-left: 15px;
-    color: #293845;
 }
