--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,12 @@
 
 body {
   margin: 0;
-  font-family: Roboto;
-  font-weight: 400;
+  box-sizing: border-box;
+
 }
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
