--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
